permit-empty-passwords option, default no, largely to protect LDAP users who
left LDAP anonymous authentication switched on.... The I/O layer was rewritten
to use non-blocking I/O throughout. Support for TLS was added. Connections are
now frozen briefly after a failed authentication using code adapted from a
contribution by Yann Grossel, who also contributed support for MySQL server
failover for auth-mysql. tpop3d will now remove a stale lock files for
mailspools. Various code tidyings-up.

1.4.2

tpop3d now accepts passwords containing spaces. auth-pam now passes the client
host information to the authentication stack. A fix to the logging code to work
around PAM brokenness was made. A memory leak in auth-ldap was fixed. The
amount of data transferred to/from the client is recorded. Fixed some bugs
which caused crashes on old versions of Solaris.

Added support for authentication against /etc/passwd-style flat text files,
contributed by Angel Marin. Added configuration-file options equivalent to
the -d command-line switch. Added support for notification of a DRAC server for
POP-before-SMTP relaying. Added support for the $(serverhost) substitution
variable in certain authenticators, thanks to Matthew Reimer.

1.4.1

Hooks for POP-before-SMTP relaying support were implemented in tpop3d, and
support for same in TPOP3D::AuthDriver.

Incorporated LDAP support by Sebastien Thomas. The internal semantics of
authentication were changed slightly.

Added the option to ignore a domain name supplied by a user, based upon code
supplied by Dom Gallagher.

The facility as which tpop3d logs messages may now be changed from the
configuration file.

A serious bug in TPOP3D::AuthDriver which affected operation under
auth-other was corrected. Fixed the behaviour of STAT after DELE. A bug in the
experimental BSD metadata cache code was fixed. A memory leak in the stringmap
code which affected auth-perl and auth-other was fixed. Fixed a reference